Fix welcome screen z-index problem

--- a/src/components/WelcomeScreen.module.css
+++ b/src/components/WelcomeScreen.module.css
@@ -1,6 +1,6 @@
 .WelcomeScreen {
   background-color: rgba(0, 0, 0, 0.1);
-  z-index: 2;
+  z-index: var(--z-welcome-screen);
   display: grid;
   place-items: center;
   transform-style: preserve-3d;
