--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@
     --z-board: 1;
     --z-nav-main: 999;
     --z-nav-secondary: 999;
-    --z-welcome-screen: 1;
+    --z-welcome-screen: 1000;
     --z-canvas-fx: 1;
     --z-dialog: 998;
   }
